@@ -1,4 +1,5 @@
 5.0-alpha2
+ * Remove metrics-reporter-config dependency (CASSANDRA-18743)
  * Fix SAI's SegmentMetadata min and max primary keys (CASSANDRA-18734)
  * Remove commons-codec dependency (CASSANDRA-18772)
 Merged from 4.1:
